# PSO-Programacion-Paralela

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  grid_search.yaml
docs/: design.md  report.md
pso/core/: equations.py  particle.py  stopping_criteria.py  swarm.py  topology.py
pso/experiments/: grid_search.py  runner.py
pso/io/: storage.py
pso/objectives/: functions.py
pso/parallel/: async_eval.py  multiprocessing_eval.py  sequential_eval.py  threading_eval.py  vector_eval.py
pso/viz/: convergence.py  graph.py
results/benchmarks/sequential/: run_ackley_d10_sequentialevaluator_20260527_123005.json  run_ackley_d2_sequentialevaluator_20260527_123005.json  run_rastrigin_d10_sequentialevaluator_20260527_123004.json  run_rastrigin_d2_sequentialevaluator_20260527_123004.json  run_rosenbrock_d10_sequentialevaluator_20260527_123004.json  run_rosenbrock_d2_sequentialevaluator_20260527_123003.json  run_sphere_d10_sequentialevaluator_20260527_123003.json  run_sphere_d2_sequentialevaluator_20260527_123003.json
results/benchmarks/vectorized/: run_ackley_d10_vectorizedevaluator_20260527_123006.json  (+8 more)
scripts/: make_viz.py  run_analysis.py  run_benchmarks.py  run_grid_search.py  run_pso.py
tests/: test_bounds.py  test_global_best.py  test_seeds.py  test_sphere_convergence.py  test_strategies.py
use_case/: README.md  portfolio_optimization.py  run_use_case.py
use_case/results/: result_v0_sequential.json  result_v1_threading.json  result_v2_multiprocessing.json  result_v3_async.json  result_v4_vectorized.json
