
authors = [{name = "Alejandro"}]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pso-project"
version = "0.1.0"
description = "PSO with parallel and concurrent evaluation strategies"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
viz = [
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pso*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"